--- a/memo/ashiato45.sty
+++ b/memo/ashiato45.sty
@@ -131,3 +131,5 @@
 \newcommand{\Rmod}[2]{#2{}_{#1}}
 \newcommand{\Ann}{\mathrm{Ann}}
 \newcommand{\id}{\mathrm{id}}
+\newcommand{\cok}{\mathrm{Cok}}
+\newcommand{\Hom}{\mathrm{Hom}}
